# OpenAstroFirmware

./: .gitignore  LICENSE  OpenAstroFirmware.code-workspace  README.md  ROADMAP.md  openocd.cfg  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/boards/: native_sim.conf  native_sim.overlay  nucleo_f446re.conf  nucleo_f446re.overlay  robin_e3.conf  robin_e3.overlay  robin_nano.conf  robin_nano.overlay
app/include/mount/: IMount.hpp  Mount.hpp  MountWorker.hpp
app/src/: CMakeLists.txt  main.cpp
app/src/device/uart/: InterruptUART.hpp  PollingUART.hpp  UART.hpp
app/src/mount/: CMakeLists.txt  Kconfig  Mount.cpp  MountWorker.cpp
app/src/processor/lx200/: Lx200CommandHandler.hpp  Lx200Parser.cpp  Lx200Parser.hpp
firmware/: CMakeLists.txt  Kconfig  logging.conf  prj.conf
firmware/boards/: native_sim.conf  native_sim.overlay  nucleo_f446re.conf  nucleo_f446re.overlay  robin_nano.overlay
firmware/include/: Mount.hpp  MountCommand.hpp  lx200.h  lx200.hpp
firmware/include/device/gpio/: GPIO.hpp
firmware/include/device/uart/: UART.hpp
firmware/include/mount/: Mount.hpp
firmware/include/utils/: AsyncResult.hpp
firmware/lib/: CMakeLists.txt  Kconfig
firmware/lib/lx200/: CMakeLists.txt  Kconfig  lx200.c  lx200.cpp
firmware/lib/lx200/include/: MeadeLX200Parser.hpp
firmware/lib/lx200/src/: MeadeLX200Parser.cpp
firmware/src/: HardwareConfiguration.hpp  Mount.cpp  Mount.hpp  main.c  main.cpp
firmware/src/device/button/: Button.cpp  Button.hpp  GPIO.cpp
firmware/src/mount/: Mount.cpp  MountWorker.cpp
firmware/src/processor/: MeadeLX200Processor.cpp  MeadeLX200Processor.hpp
firmware/test/test-example/: prj.conf  testcase.yaml
tests/lib/lx200/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
tests/lib/lx200/src/: main.c  (+6 more)
(+60 files in other folders)
